// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/ScrollBar with default props 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    scale={1}
  />
</Track>
`;

exports[`react-graph-editor/ScrollBar with knobs 1`] = `
<ScrollBar
  orientation="vertical"
  overflow="auto"
  progress={0}
  scale={1}
  style={
    Object {
      "height": "400px",
      "margin": "25vh",
    }
  }
/>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    scale={2}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0.5 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={0.5}
    scale={2}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0.25 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={0.25}
    scale={2}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0.75 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={0.75}
    scale={2}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 1 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={1}
    scale={2}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    scale={10}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0.5 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={0.5}
    scale={10}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0.25 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={0.25}
    scale={10}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0.75 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={0.75}
    scale={10}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 1 1`] = `
<Track
  orientation="vertical"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    orientation="vertical"
    progress={1}
    scale={10}
  >
    <Thumb
      orientation="vertical"
    />
  </ThumbContainer>
</Track>
`;
